--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://producthire.net/job/user-experience-research-intern-pocket-summer-2020/'>User Experience Research Intern - Pocket (Summer 2020) | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/objqbfwP'>VMLY&R Careers - Intern - Finance</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://www.careerconnections.ca/job/meat-processing-internship/'>Meat Processing Internship | Nova Scotia Works: Career Connections</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/dataiku/9fadf0b6-b87b-4fd0-bd72-d642679dc90b'>Dataiku - Software Engineer Intern - Interactive Data Preparation</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dataiku/a4e06a5b-0bcf-4613-9daf-2fb40a8c7eab'>Dataiku - Software Engineer Intern - Fuzzy Join</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://producthire.net/job/user-experience-research-intern-pocket-summer-2020/'>User Experience Research Intern - Pocket (Summer 2020) | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/double-negative-visual-effects/job/o9psbfwV'>DNEG Careers - Resource Manager - Gestionnaires des ressources internes</a></h5> 
@@ -77,7 +93,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Francisco Sunnyvale, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/o7yrbfw1'>LinkedIn Careers - MBA Intern, Online Sales Strategy and Management</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/o7yrbfw1'>LinkedIn Careers - MBA Intern, Online Sales Strategy and Management</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -125,7 +141,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698631432-research-uk-summer-internship-2020'>Verisk Research UK Summer Internship 2020 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698631432-research-uk-summer-internship-2020'>Verisk Research UK Summer Internship 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -147,7 +163,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Rituals1/743999698630091-webshop-internship'>Rituals Webshop Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Rituals1/743999698630091-webshop-internship'>Rituals Webshop Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -183,13 +199,13 @@
 <p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://digimind.recruiterbox.com/jobs/fk03onm/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digimind.recruiterbox.com/jobs/fk03onm/'>
     Marketing Operations Intern, Mercado Espa?ol y LATAM at Digimind
 </a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/2020-information-technology-national-incident-response-team-nirt-intern-3-positions-9591'>2020 Information Technology- National Incident Response Team (NIRT) Intern (3 positions) - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/2020-information-technology-national-incident-response-team-nirt-intern-3-positions-9591'>2020 Information Technology- National Incident Response Team (NIRT) Intern (3 positions) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">California San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -245,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ojK89fw4&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nW4hqMwY'>Palo Alto Networks Careers - Intern - Cortex Data Lake Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ojK89fw4&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nW4hqMwY'>Palo Alto Networks Careers - Intern - Cortex Data Lake Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -265,7 +281,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -405,7 +421,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://unitedfray.applytojob.com/apply/r3MS40F1kC/Digital-Media-Internship-Immediate-Positions-And-Spring-2020'>Digital Media Internship (Immediate Positions and Spring 2020) - United Fray - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitedfray.applytojob.com/apply/r3MS40F1kC/Digital-Media-Internship-Immediate-Positions-And-Spring-2020'>Digital Media Internship (Immediate Positions and Spring 2020) - United Fray - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -439,22 +455,6 @@
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/harrisonrush/job/shmiex6gtfxb849t9b7pxib9ar'>Senior Vice President/ Director - Internet, Fin Tech, Software  | The Harrison Rush Group</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://lockton.referrals.selectminds.com/jobs/intern-1898'>Intern - Lockton Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://lockton.referrals.selectminds.com/jobs/analytics-intern-1838'>Analytics Intern - Lockton Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://definityfirst.applytojob.com/apply/FCb3FNpewk/Dynamics-CRM-Dev-Internship'>Dynamics CRM Dev Internship - Definity First - Career Page</a></h5> 
-<p><span class="badge badge-light">Mexico</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/ocrsbfw0'>Eidos Montr?al Careers - Stagiaire, Programmeur Technologie / Intern Technology Programmer</a></h5> 
-<p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
